# BPoSt_0.0.1.09021336

./: .gitignore  Cargo.toml  Dockerfile  actors.py  blockchain.py  client.py  config.py  coordinator.py  crypto.py  data.py  dpdp.py  folding.py  go.sh  main.py  merkle.py  network.py  protocol.py  server.py  sim.py  simulation.py  threadnet.py  trees.py  utils.py
.junie/: guidelines.md  main.tex
Crypto/: dpdp.py
common/: datastructures.py
consensus/: blockchain.py
deployment/: README.md  config.example.json  config.json  config.template.json  docker-compose.yml  entrypoint.sh
deployment/aws/instance-1/: .env  config.template.json  docker-compose.yml
deployment/aws/instance-10/: config.template.json
deployment/aws/instance-11/: config.template.json
deployment/aws/instance-12/: config.template.json
deployment/aws/instance-13/: .env  config.template.json
deployment/aws/instance-14/: config.template.json
deployment/aws/instance-15/: config.template.json
deployment/aws/instance-16/: config.template.json
deployment/aws/instance-17/: config.template.json
deployment/aws/instance-18/: config.template.json
deployment/aws/instance-19/: config.template.json
p2p/: node.py  user_node.py
roles/: file_owner.py  miner.py  prover.py
src/: config.rs  lib.rs  main.rs  merkle.rs  simulation.rs  utils.rs
src/common/: datastructures.rs
src/consensus/: blockchain.rs  mod.rs
src/crypto/: dpdp.rs  folding.rs  mod.rs
src/p2p/: mod.rs  node.rs  observer_node.rs  user_node.rs
src/roles/: file_owner.rs  miner.rs  mod.rs  prover.rs
src/storage/: manager.rs  state.rs
storage/: manager.py  state.py
(+41 files in other folders)
