[package]
name = "bpst"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
thiserror = "1.0"
hex = "0.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-std = { version = "0.5", default-features = false, features = ["std"] }
ark-bn254 = "0.5"
ark-serialize = "0.5"
light-poseidon = "0.4"
indexmap = { version = "2", features = ["serde"] }
serde_bytes = "0.11"
num-bigint = "0.4"
chrono = { version = "0.4", features = ["std"] }
num-traits = "0.2"
rayon = "1.10"
nova-snark = "0.41"

# 可选的 GPU 加速依赖（默认不启用，启用时仍会安全回退）
icicle-core = { version = "1.3", optional = true }
icicle-cuda-runtime = { version = "1.3", optional = true }

[features]
default = []
# 预留 GPU 特性开关（当前实现会在不可用时回退到 CPU 并行）
gpu-icicle = ["icicle-core", "icicle-cuda-runtime"]
